--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,16 @@
 node_modules
 npm-debug.log
-Dockerfile
-.dockerignore
 .git
 .gitignore
 README.md
 .env
+.env.example
+docker-compose.yml
+Dockerfile
+.dockerignore
+data
 .nyc_output
 coverage
 .cache
+.DS_Store
+*.log
