--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,15 @@
+# TaskVault Configuration
+
+# Authentication credentials - CHANGE THESE IN PRODUCTION!
 ADMIN_USER=admin
-ADMIN_PASS=password123
-SESSION_SECRET=your-random-session-secret-here
+ADMIN_PASS=change_me_secure_password
+
+# Session security - GENERATE A RANDOM 32+ CHARACTER STRING!
+SESSION_SECRET=generate_a_random_32_character_secret_string
+
+# Application settings
+DATA_DIR=./data
+PORT=3000
+
+# Environment (development/production)
+NODE_ENV=development
