--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,28 @@
-version: '3.8'
-
 services:
   taskvault:
     build: .
     container_name: taskvault
+    restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "127.0.0.1:3000:3000"  # Bind to localhost only for security
+    volumes:
+      - ./data:/data           # Mount data directory
     environment:
       - NODE_ENV=production
+      - DATA_DIR=/data
+      - ADMIN_USER=${ADMIN_USER:-admin}
+      - ADMIN_PASS=${ADMIN_PASS:-change_me}
+      - SESSION_SECRET=${SESSION_SECRET:-generate_random_secret}
+      - PORT=3000
     env_file:
       - .env
-    volumes:
-      - ./data:/app/data
-    restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 30s
 
 volumes:
   data:
+    driver: local
